Changelog 
=========

4.0-dev - (unreleased)
----------------------
 * Feature: compatibility with Plone 4.0.4 [tiberich #4286]

0.2-dev - (unreleased)
----------------------
 * Cleanup: of pyflakes warnings [ichimdav #4141]

0.1 - (2011-02-24)
------------------
 * Change: eggified product [ichimdav #2931]
 * Initial package structure.[zopeskel]
