@@ -1,2 +1,5 @@
 EEA Translations
 ================
+
+Translations for EEA website. Most translations come from
+old local.eea.europa.eu website. We also have translated logos here.
