@@ -1,5 +1,4 @@
+""" EEA Translations
+"""
 from zope.i18nmessageid import MessageFactory
 _ = MessageFactory('eea.translations')
-
-def initialize(context):
-    """Intializer called when used as a Zope 2 product."""
