@@ -1,3 +1,0 @@
-#from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
-#from plone.app.layout.viewlets.common import ViewletBase
-
