@@ -1,14 +1,12 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
-    i18n_domain="eea.translations">
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+           i18n_domain="eea">
 
   <genericsetup:registerProfile
       name="default"
-      title="eea translations"
+      title="EEA Translations"
       directory="profiles/default"
-      description='Extension profile for the "eea translations" Plone theme.'
-      provides="Products.GenericSetup.interfaces.EXTENSION"
-      />
+      description='Extension profile for EEA Translations'
+      provides="Products.GenericSetup.interfaces.EXTENSION" />
 
 </configure>
