@@ -1,10 +1,15 @@
 <?xml version="1.0"?>
-<object name="portal_css">
+<object name="portal_css"  meta_type="Stylesheets Registry">
 
  <stylesheet title=""
-    id="++resource++eea.translations-logo.css"
-    media="screen" rel="stylesheet" rendering="import"
-    cacheable="True" compression="safe" cookable="True"
-    enabled="1" expression=""/>
+             id="++resource++eea.translations-logo.css"
+             media="screen"
+             rel="stylesheet"
+             rendering="import"
+             cacheable="True"
+             compression="safe"
+             cookable="True"
+             enabled="1"
+             expression=""/>
 
 </object>
