@@ -1,11 +1,0 @@
-<?xml version="1.0"?>
-<import-steps>
-  <import-step id="eea.translations.various"
-               version="20080304-01"
-               handler="eea.translations.setuphandlers.setupVarious"
-               title="eea translations: miscellaneous import steps">
-    <dependency step="skins" />
-    Various import steps that are not handled by GS import/export
-    handlers.
-  </import-step>
-</import-steps>
