@@ -1,0 +1,6 @@
+<?xml version="1.0"?>
+<metadata>
+ <description>EEA Translations profile</description>
+ <version>1</version>
+</metadata>
+
