@@ -1,14 +1,9 @@
-<configure
-    xmlns="http://namespaces.zope.org/zope"
-    xmlns:cmf="http://namespaces.zope.org/cmf"
-    i18n_domain="eea.translations">
+<configure xmlns="http://namespaces.zope.org/zope"
+           xmlns:cmf="http://namespaces.zope.org/cmf"
+           i18n_domain="eea">
 
-   <!-- File System Directory Views registration -->
-   <cmf:registerDirectory
-       name="eea_translations_custom_images"/>
-   <cmf:registerDirectory
-       name="eea_translations_custom_templates"/>
-   <cmf:registerDirectory
-       name="eea_translations_styles"/>
+  <cmf:registerDirectory name="eea_translations_custom_images"/>
+  <cmf:registerDirectory name="eea_translations_custom_templates"/>
+  <cmf:registerDirectory name="eea_translations_styles"/>
 
 </configure>
