@@ -1,5 +1,7 @@
-Changelog 
+Changelog
 =========
+[Alexandru Ghica - alec.ghica at eaudeweb.ro]
+[Sasha Vincic - Valentine Web Systems]
 
 4.0-dev - (unreleased)
 ----------------------
@@ -12,5 +14,5 @@ Changelog
 0.1 - (2011-02-24)
 ------------------
  * Change: eggified product [ichimdav #2931]
- * Initial package structure.[zopeskel]
+ * Initial package structure [ichimdav #2931]
 
